re PR target/38208 (gcc.c-torture/compile/20080806-1.c)

PR target/38208
	* reload1.c (eliminate_regs_in_insn): For trunc_int_for_mode use
	mode of PLUS, not mode of the eliminated register.

From-SVN: r142088